--- a/HeadacheCDSSWeb/Views/Shared/PatLayout.cshtml
+++ b/HeadacheCDSSWeb/Views/Shared/PatLayout.cshtml
@@ -6,12 +6,17 @@
     <link href="@Url.Content("~/Content/patstyle.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.7.2.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>    
-     <script src="@Url.Content("~/Scripts/plugins/jquery-1.8.3.js")" type="text/javascript"></script><script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")"type="text/javascript"></script>
-    <link href="@Url.Content("~/Content/jqpagination.css")" rel="stylesheet" type="text/css" />
+     <script src="@Url.Content("~/Scripts/plugins/jquery-1.8.3.js")" type="text/javascript"></script>
+     <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")"type="text/javascript"></script>
+    <link href="@Url.Content("~/Content/jqpagination.css")" rel="stylesheet" type="text/css"/>
     <script src="@Url.Content("~/Scripts/jquery.jqpagination.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/zebra_datepicker.js")"type="text/javascript"></script>
-    <link href="@Url.Content("~/Content/zebra_datepicker.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-ui.js")"type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/plugins/bootstrap-datetimepicker.min.js")"type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/plugins/bootstrap-datetimepicker.js")"type="text/javascript"></script>
+      <script src="@Url.Content("~/Scripts/plugins/bootstrap.min.js")"type="text/javascript"></script>
+     <link href="@Url.Content("~/Content/bootstrap-datetimepicker.min.css")" rel="stylesheet" type="text/css"/>
+       <link href="@Url.Content("~/Content/bootstrap-combined.min.css")" rel="stylesheet" type="text/css"/>
+
    
 </head>
 <body>
@@ -33,10 +38,10 @@
         <div id="footer">
         </div>
           <!--weixin-->
-         <div id ="wx">
+        @* <div id ="wx">
         <img  src="../../Content/images/二维码.png" />
         <p class="introduction">欢迎下载“掌上头痛管家”随时随地记录头痛日志</p>
-        </div>
+        </div>*@
     </div>
 </body>
 </html>
