--- a/HeadacheCDSSWeb/Views/Shared/RecordViewLayout.cshtml
+++ b/HeadacheCDSSWeb/Views/Shared/RecordViewLayout.cshtml
@@ -21,9 +21,15 @@
    <script src="@Url.Content("~/Scripts/plugins/jqplot.barRenderer.min.js")" type="text/javascript"></script>
    <script src="@Url.Content("~/Scripts/plugins/jqplot.categoryAxisRenderer.min.js")" type="text/javascript"></script>
    <script src="@Url.Content("~/Scripts/plugins/jqplot.donutRenderer.min.js")" type="text/javascript"></script>
+   <script src="@Url.Content("~/Scripts/plugins/jqplot.pieRenderer.min.js")" type="text/javascript"></script>
    <script src="@Url.Content("~/Scripts/plugins/bootstrap.min.js")" type="text/javascript"></script>
    <script src="@Url.Content("~/Scripts/jquery.json-2.4.min.js")" type="text/javascript"></script>
-  
+    <script src="@Url.Content("~/Scripts/plugins/jqplot.dateAxisRenderer.min.js")" type="text/javascript"></script>
+   <script src="@Url.Content("~/Scripts/plugins/bootstrap-datetimepicker.min.js")"type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/plugins/bootstrap-datetimepicker.js")"type="text/javascript"></script>
+     @* <script src="@Url.Content("~/Scripts/plugins/bootstrap.min.js")"type="text/javascript"></script>*@
+     <link href="@Url.Content("~/Content/bootstrap-datetimepicker.min.css")" rel="stylesheet" type="text/css"/>
+       <link href="@Url.Content("~/Content/bootstrap-combined.min.css")" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <div id="wrapper">
