7/6 已发布到阿里云上使用
修改：1、绘图数据没有显示小数位 2、头痛时长计算有偏差 3、眼眶周围和运动加剧两个索引溢出

--- a/HeadacheCDSSWeb/Views/ViewPatRecord/Index.cshtml
+++ b/HeadacheCDSSWeb/Views/ViewPatRecord/Index.cshtml
@@ -452,7 +452,7 @@
                     var index = 0;
                     var sum = 0;
                     for (var j = flag + 1; j < myobj.length; j++) {
-                        newobj[index] = [myobj[j].kind, parseInt(myobj[j].data)];
+                        newobj[index] = [myobj[j].kind, parseFloat(myobj[j].data)];
                         index++;
                         sum += myobj[j].data;
                     }
@@ -463,6 +463,7 @@
                     if (newobj.length == 0)
                         newobj = [[0, 0], [0, 0], [0, ], [0, 0], [0, 0], [0, 0]];
                     //图1
+                    debugger;
                     var ylabel = "";
                     if (selected1 == "头痛时长") {
                         ylabel = "小时"
